--- a/we.css
+++ b/we.css
@@ -153,9 +153,12 @@ h2:hover{
     margin-left: 50px;
 }
 
+.SecSecond{
+    display: flex;
+    justify-content: center;
+}
+
 .SecondSec{
-    position: absolute;
-    margin-left: 130px;
     background-color: #2d2d2d;
     border-radius: 8px;
     border: 2px solid #4CAF50;
